tests/negative/maps/map_literal_in_array_ctx/input.ci
void main() {
    int[] xs = ["a": 1];
}
